<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".geofencing.GeofenceDialog">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/dialog_container"
    android:layout_width="0dp"
    android:layout_height="300dp"
    android:layout_marginHorizontal="25dp"
    android:background="@drawable/geofence_dialog_enter_bg"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/geofence_dialog_header_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_dialog_txt"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:textColor="@color/dialogTextColor"
            />
        <TextView
            android:id="@+id/sub_header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_header_dialog_txt"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:textColor="@color/dialogTextColor"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/id_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogTextColor"
        android:text="@string/identifier_dialog_txt_format"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        />
    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogTextColor"
        android:text="@string/name_dialog_txt_format"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/id_tv"
        />
    <TextView
        android:id="@+id/location_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogTextColor"
        android:text="@string/location_dialog_txt_format"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        />
    <TextView
        android:id="@+id/radius_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogTextColor"
        android:text="@string/radius_dialog_txt_format"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/location_tv"
        />
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:onClick="onDialogCloseClick"
        android:tint="@color/lightGray"
        android:background="?android:selectableItemBackground"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>